--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/DuroSoft/node-utils/issues"
   },
-  "homepage": "https://github.com/DuroSoft/node-utils#readme"
+  "homepage": "https://github.com/DuroSoft/node-utils#readme",
+  "dependencies": {
+    "secure-random": "^1.1.1"
+  }
 }
